# OBJParser

./: .gitignore  CMakeLists.txt
includes/: MainScene.hpp  Shader.hpp  ShaderProgram.hpp  Utils.hpp
includes/glad/: glad.h
shaders/: basic.frag  basic.vert
srcs/: MainScene.cpp  Shader.cpp  ShaderProgram.cpp  Utils.cpp  glad.c  main.cpp  test.cpp
